Actualización de la API